Fixing database restore, adding favicon

--- a/monitoring/templates/backups/backups_table.html
+++ b/monitoring/templates/backups/backups_table.html
@@ -8,7 +8,7 @@
                 <th>Файл</th>
                 <th>Розмір</th>
                 <th>Статус</th>
-                <th>Причина</th>
+                <th>Вид</th>
                 <th>Створено</th>
                 <th>Пов'язані записи</th>
                 {% if user.profile.is_manager %}
