--- a/monitoring/templates/dashboard/partials/logs_table.html
+++ b/monitoring/templates/dashboard/partials/logs_table.html
@@ -6,7 +6,7 @@
                 <th>Час</th>
                 <th>Потужність (Вт)</th>
                 <th>Аномалія</th>
-                <th>Передбачена аномалія</th>
+                <th>Прогнозується аномалія</th>
                 <th>Резервна копія</th>
             </tr>
         </thead>
